<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Guía Móvil Curicó</string>
    <string-array name="categoriesESP">
        <item >Sitios Turísticos</item>
        <item >Sitios de Interés</item>
        <item >Entretenimiento</item>
        <item >Servicios</item>
    </string-array>
    
    <string-array name="touristAttractionsESP">
        <item >Playas</item>
        <item >Lagos</item>
        <item >Ríos</item>
        <item >Montañas y Volcanes</item>
        <item >Ciudades</item>
        <item >Parques y Reservas</item>
    </string-array>
    
    <string-array name="siteOfInterestESP">
        <item >Monumentos</item>
        <item >Esparcimiento</item>
        <item >Museos y Bibliotecas</item>
        <item >Patrimonio</item>
    </string-array>
    
    <string-array name="recreationESP">
        <item >Bienestar y Relajación</item>
        <item >Restaurantes</item>
        <item >Bares y Pubs</item>
        <item >Deportes y Fitness</item>
    </string-array>
    
    <string-array name="servicesESP">
        <item >Centros de Salud</item>
        <item >Carabineros</item>
        <item >Alojamiento</item>
        <item >Transporte</item>
        <item >Provisiones</item>
    </string-array>
    
    <string-array name="categoriesING">
        <item >Tourist Attractions</item>
        <item >Sites of Interest</item>
        <item >Recreation</item>
        <item >Services</item>
    </string-array>
    
    <string-array name="touristAttractionsING">
        <item >Beach</item>
        <item >Lakes</item>
        <item >Rivers</item>
        <item >Moutains and Volcains</item>
        <item >Cities</item>
        <item >Parks and Reserves</item>
    </string-array>
    
    <string-array name="siteOfInterestING">
        <item >Monuments</item>
        <item >Amusement</item>
        <item >Museums and Libraries</item>
        <item >Cultural Heritage</item>
    </string-array>
    
    <string-array name="recreationING">
        <item >Well-Being and Relax</item>
        <item >Dining</item>
        <item >Bars and Pubs</item>
        <item >Sports and Fitness</item>
    </string-array>
    
    <string-array name="servicesING">
        <item >Health and Care Centers</item>
        <item >Police Stations</item>
        <item >Lodging</item>
        <item >Transport</item>
        <item >Supply Centers</item>
    </string-array>
    <string name="mainESP">Principal</string>
    <string name="mainING">Main Menu</string>
    <string name="infoESP"></string>
    <string name="titleInfoESP"></string>
    <color name="background">#4e8950</color>
    <color name="searchColor">#888888</color>
    <string name="searchESP">Buscar</string>
    <string name="searchING">Search</string>
    <color name="previousCategories">#CCCCCC</color>
    <string name="comentESP">Comentario</string>
    <string name="apodoESP">Apodo</string>
    <string name="comentEspaceESP">Comentario</string>
    <string name="Enviar">sendESP</string>
    <string name="SendESP">Enviar</string>
    <string name="cancelESP">Cancelar</string>
    <string name="nickId">Juan dice:</string>
    <string name="comentario">Buen lugar, me parece una excelente alternativa para pasear, junto a la familia y/o amigos....</string>
    <string name="aceptESP">Aceptar</string>
    <string name="cancelesp">Cancelar</string>
    <string name="exitDialogESP">No estás conectado a internet en este momento, active wifi o 3g por favor.</string>
    <string name="exitDialogING">You\'re not connected to internet right now, activate wifi or 3g please.</string>
    <string name="checkinESP">¿Desea hacer checkin en esta localización?</string>
    <string name="checkinING">¿Do you want to check you in this location?</string>
    <string name="about">Guía móvil Curicó es una plataforma de información diseñada para ser usada en la provincia de Curicó con el fin de entregar información de utilidad tanto a turistas como gente de la provincia. El objetivo de esta aplicación es facilitar la búsqueda de lugares de atracción y/o puntos de interés existentes en la provincia de Curicó.</string>
    <string name="abouting">Curicó Mobile Guide is an information platform designed for use in the province of Curicó to deliver useful information to both tourists and people of the province. The purpose of this application is easier to find places of attraction and / or points of interest in the province of Curicó</string>

</resources>