<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center|center_vertical|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comentESP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/nickTitle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/apodoESP"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nickText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/commentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentEspaceESP"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <EditText
        android:id="@+id/commentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.89"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sendComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:text="@string/SendESP" />

        <Button
            android:id="@+id/cancelComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:text="@string/cancelESP" />

    </LinearLayout>

</LinearLayout>